completion; Fix type hints not showing up in last autocomplete-plus plugin
This is likely to break again in the future, until we don't use autocomplete-plus anymore for this feature.

--- a/styles/atom-haxe.less
+++ b/styles/atom-haxe.less
@@ -90,8 +90,9 @@ atom-text-editor[data-grammar="source haxe"] {
                 font-size: 12px;
                 width: 100%;
                 text-align: center;
-                margin: 2px 0;
+                margin: 2px 0 0 -4px;
                 padding: 0 5px;
+                position: relative;
 
                 .current-argument {
                     font-weight: bold;
